2008-07-28  Brian Bidulock  <bidulock@openss7.org>

	* src/snmp/mib2c.openss7.conf: updates to mib builder
	* src/snmp/strMIB.c: agent corrections
	* src/snmp/strMIB.h: agent corrections

2008-07-27  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* doc/manual/SPG.texi: no invariant sections for debian
	* doc/manual/SPG2.texi: no invariant sections for debian
	* doc/manual/STREAMS.texi: no invariant sections for debian
	* doc/manual/STREAMS_FAQ.texi: no invariant sections for debian
	* m4/.cvsignore: more libtool files to ignore

2008-07-26  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man2/read.2s.man: sp corrections
	* src/modules/sth.c: implemented fix for bug 016
	* src/test/test-streams.c: added test case for bug 016
	* tests/testsuite-streams.at: added test case for bug 016

2008-07-25  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/bugs.texi: document bug 019
	* src/modules/sth.c: fix for bug 019

	* doc/manual/bugs.texi: document bug 018
	* src/modules/sth.c: fix for bug 018
	* src/test/test-streams.c: test cases for bug 018 and general
	  corrections

2008-07-23  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/streams.refs: update references

2008-06-18  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/streams.refs: update references

2008-05-04  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* streams.lsm.in: updates for release
	* streams.spec.in: updates for release
	* debian/mscript_header.in: updates for release
	* debian/rules.in: updates for release
	* debian/streams-core.postinst.in: updates for release
	* debian/streams-core.postrm.in: updates for release
	* debian/streams-core.preinst.in: updates for release